# project_1

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
authapp/: admin.py  models.py
authapp/migrations/: 0001_initial.py
config/: settings.py  urls.py
department/: models.py  serializers.py  views.py
department/migrations/: 0001_initial.py  0002_department_director.py
employees/: models.py  serializers.py  views.py
employees/migrations/: 0001_initial.py
